Created some error handling routes on server.js and defined the error 404 and 500 .ejs files. Next step I'm taking is going to start defining the admin and users systems with passport.

--- a/FileSharingServerApplication/views/index.ejs
+++ b/FileSharingServerApplication/views/index.ejs
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Home page</title>
-        <link rel="stylesheet" href="/css/style.css" />
-    </head>
-    <body>
-        <h1>This is the home page.</h1>
-        <p>The current time is: <%= currentTime %></p>
-        <p>Click <a href="/about"> here</a> to go to the about page.</p>
-        <p>Click <a href="/contact">here</a> to go to the contact page.</p>
-        <div class="server-timeline">
-            <h2>Server Timeline</h2>
-            <p>This is where the peer to peer connections are going to be placed. I'm thinking probably use something like a button to navigate to known devices, and another button to discover.</p>
-            <p><a href="/new">New connection</a></p>
-            <p><a href="/known">Known connections</a></p>
-        </div>
-    </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Web Socket Server Testing</title>
+      <link rel="stylesheet" href="./style.css" />
+   </head>
+   <body>
+      <main>
+         <h1>Web Socket Server Testing Sandbox</h1>
+         <p>The current time is: <%= currentTime %></p>
+         <p>This is some sample text of where I will be putting a graphical user interface for the user to interact with on controlling the server.</p>
+      </main>
+   </body>
 </html>
